# earclip

./: .eslintrc  .gitignore  .npmignore  .oxfmtrc.json  .oxlintrc.json  CONTRIBUTE.md  Cargo.toml  LICENSE  README.md  bacon.toml  build.ts  bun.lockb  bunfig.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  tsconfig.tsbuildinfo  typedoc.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md  4-docs-issue.md  feature_request.md
.github/workflows/: coveralls.yml  pages.yml  test.yml
.helix/: languages.toml
benches/: benchmark.rs
coverage/: .lcov.info.0c37e4cfa31980d5.tmp  .lcov.info.13c2e8277c4719f0.tmp  lcov.info
docs/: index.html  modules.html
docs/assets/: navigation.js  search.js
docs/functions/: deviation.html  earclip.html  earcut.html  flatten.html  tesselate.html
docs/interfaces/: EarclipResult.html  FlattenResult.html  Point.html  Point3D.html
docs/types/: SplitResult.html
earclip/: earcut.rs  lib.rs
rust/: earcut.rs  lib.rs
src/: earcut.ts  index.ts
test/: earclip.test.ts  earcut.test.js  earcut.test.ts
tests/: earclip.rs  earclip.test.ts  earcut.rs  earcut.test.ts  expected.json
tests/fixtures/: bad-diagonals.json  bad-hole.json  boxy.json  building.json  collinear-diagonal.json  degenerate.json  dude.json  eberly-3.json  eberly-6.json  empty-square.json  hilbert.json  hole-touching-outer.json  hourglass.json  issue111.json  issue119.json  issue131.json  issue16.json  issue17.json  issue29.json  issue34.json  issue35.json  issue45.json  issue52.json  issue83.json  outside-ring.json  rain.json  self-touching.json  shared-points.json  simplified-us-border.json  steiner.json  touching-holes.json  touching2.json  touching3.json  touching4.json  water-huge.json  water-huge2.json  water.json  water2.json  water3.json  water3b.json  (+1 more)
tools/: buildCoverage.ts
