[package]
name = "earclip"
version = "1.0.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Triangle mesh designed to be fast, efficient, and sphere capable."
documentation = "https://docs.rs/earclip"
homepage = "https://github.com/OpenS2/earclip"
repository = "https://github.com/OpenS2/earclip"
readme = "README.md"
categories = ["no-std", "algorithms"]
keywords = ["earclip", "earcut", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["/ovtile", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/benchmarks",
    "/docs",
    "/test",
    "/tools",
    "/src",
]

[lib]
name = "earclip"
path = "earclip/lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[features]
default = ["std"]
std = []

[profile.bench]
opt-level = 3
