[package]
name = "earclip"
version = "1.2.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Triangle mesh designed to be fast, efficient, and sphere capable."
documentation = "https://docs.rs/earclip"
homepage = "https://github.com/OpenS2/earclip"
repository = "https://github.com/OpenS2/earclip"
readme = "README.md"
categories = ["no-std", "algorithms"]
keywords = ["earclip", "earcut", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["/ovtile", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/benchmarks",
    "/coverage",
    "/docs",
    "/tests",
    "/tools",
    "/src",
    ".github",
    ".helix"
]

[lib]
name = "earclip"
path = "rust/lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2"

[dev-dependencies]
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3
